--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
-version: "3.9"
+version: "3.9"  # Specify the version of the Docker Compose file syntax to use
 
 services:
   app:
     build:
-      context: .
+      context: .  # Build context is the path to the directory containing the Dockerfile (current directory in this case)
       args:
-        - DEV=true
+        - DEV=true  # Build argument used in the Dockerfile (DEV is set to true)
     ports:
-      - "8000:8000"
+      - "8000:8000"  # Map port 8000 from the container to port 8000 on the host
     volumes:
-      - ./app:/app
+      - ./app:/app  # Mount the local ./app directory into the /app directory in the container
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
+    # Command to run when the container starts
