--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,19 @@
-version: "3.9"  # Specify the version of the Docker Compose file syntax to use
+version: "3.9"
 
 services:
   app:
     build:
-      context: .  # Build context is the path to the directory containing the Dockerfile (current directory in this case)
+      context: .
       args:
-        - DEV=true  # Build argument used in the Dockerfile (DEV is set to true)
+        - DEV=true
     ports:
-      - "8000:8000"  # Map port 8000 from the container to port 8000 on the host
+      - "8000:8000"
     volumes:
-      - ./app:/app  # Mount the local ./app directory into the /app directory in the container
+      - ./app:/app
     command: >
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
-    # Command to run when the container starts
     environment:
       - DB_HOST=db
       - DB_NAME=devdb
